# pounce

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  linkedin-v0.4.0.md
benchmarks/cutest/: CUTEST_COMPARATIVE_REPORT.org  Cargo.toml  README.md  build.rs  collect_kkt.rs  compare.py  cutest_ffi.rs  prepare.sh  problem_list.txt  problem_list_full.txt
benchmarks/cutest/src/: cutest_problem.rs  lib.rs
benchmarks/gpu_spike/: Cargo.toml  README.md
benchmarks/gpu_spike/src/: gpu.rs  lib.rs  main.rs
benchmarks/large_scale/: Cargo.toml  README.md  build.rs  generate_nl.py  ipopt_ma57.json
benchmarks/large_scale/src/: lib.rs  problems.rs
crates/pounce-algorithm/: Cargo.toml  README.md
crates/pounce-algorithm/src/: alg_builder.rs  application.rs  batch.rs  debug.rs  debug_rank.rs  intermediate.rs  ipopt_alg.rs  ipopt_cq.rs  ipopt_data.rs  iter_dump.rs  iterate_dump.rs  lib.rs  restoration.rs  upstream_options.rs
crates/pounce-algorithm/tests/: algorithm_options_wiring.rs  colored_table.rs  diagnostics_kkt_dump.rs  finalize_scaled_bound_duals.rs  hock_schittkowski_subset.rs  l1_penalty_integration.rs  large_lbfgs_lowrank.rs  masked_certificate_fuzz.rs  masked_certificate_veto.rs  mu_options_wiring.rs  mu_strategy_fallback_option.rs  optimize_hs14.rs  optimize_hs71.rs  parametric_sqp_corrector.rs  presolve_identity_hs71.rs  presolve_phase1_tightens.rs  presolve_phase2_drops_rows.rs  presolve_phase3_licq.rs  presolve_phase4_warm_z.rs  presolve_phase5_passthrough.rs  repro_issue248.rs  repro_issue252.rs  repro_issue285.rs  schur_corpus.rs  solver_selection_library_option.rs  sqp_filter_vs_l1_elastic.rs
crates/pounce-cinterface/: Cargo.toml  README.md
crates/pounce-cinterface/examples/: sqp_warm_start.c
crates/pounce-cinterface/include/: pounce.h
crates/pounce-cinterface/src/: fortran.rs  lib.rs  solver.rs
crates/pounce-cli/: Cargo.toml  README.md  build.rs
crates/pounce-cli/src/: builtin.rs  cbf.rs  certify.rs  check_x0.rs  citations.rs  cli.rs  counting_tnlp.rs  debug_repl.rs  dispatch.rs  lib.rs  main.rs  nl_external.rs  nl_fbbt_translate.rs  nl_hessian_program.rs  nl_reader.rs  nl_tape.rs  nl_writer.rs  print.rs  qp_extract.rs  seeded_tnlp.rs  sens.rs  solve_report.rs  tree_debug.rs  verify.rs
crates/pounce-cli/tests/: ampl_driver_conventions.rs  auxiliary_presolve.rs  cblib_cbf.rs  (+30 more)
crates/pounce-common/: Cargo.toml  README.md
crates/pounce-convex/: Cargo.toml  README.md
crates/pounce-feral/: Cargo.toml  README.md
crates/pounce-global/: Cargo.toml  README.md
crates/pounce-hsl/: Cargo.toml  README.md  build.rs
crates/pounce-l1penalty/: Cargo.toml  README.md
crates/pounce-lean-cert/: Cargo.toml  README.md
crates/pounce-linalg/: Cargo.toml  README.md
crates/pounce-linsol/: Cargo.toml  README.md
crates/pounce-nl/: Cargo.toml
crates/pounce-nlp/: Cargo.toml  README.md
crates/pounce-observability/: Cargo.toml
crates/pounce-presolve/: Cargo.toml
crates/pounce-py/: Cargo.toml  README.md
crates/pounce-qp/: Cargo.toml  README.md
crates/pounce-restoration/: Cargo.toml  README.md
crates/pounce-rs/: Cargo.toml  README.md
crates/pounce-sensitivity/: Cargo.toml  README.md
crates/pounce-simplex/: Cargo.toml  README.md
crates/pounce-solve-report/: Cargo.toml  build.rs
crates/pounce-studio-core/: Cargo.toml  README.md
pyomo-pounce/: README.md  pyproject.toml  setup.py
pyomo-pounce/pyomo_pounce/: __init__.py  block_init.py  pounce_solver.py  preflight.py  repair.py  sens.py
pyomo-pounce/tests/: test_binary_check.py  test_block_init.py  test_covariance.py  test_pounce.py  test_preflight.py  test_repair.py  test_sens.py
python/: README.md  pyproject.toml
python/benchmarks/: bench_nlp_batch_126.py  bench_sparse_ad_83.py  probe_minres_regime.py  scaling_lp_qp_torch.py  schur_kkt_180.py  verify_issue77_claims.py
python/examples/: bvp_scaling_analysis.py  bvp_scipy_compare.py  critical_points.py  curve_fit_demo.py  dae_manifold_gap.py  glc_feral_vs_scipy.py  hs071.py  hs071_jax.py  hs071_warm_start.py  ode_scipy_compare.py  reaction_barrier.py  sqp_warm_start_mpc.py
python/notebooks/: 01_getting_started.ipynb  02_jax_autodiff.ipynb  03_implicit_differentiation.ipynb  04_sensitivity.ipynb  05_pyomo.ipynb  06_sqp_parametric_continuation.ipynb  07_scaling.ipynb  08_fbbt.ipynb  09_differentiable_layer.ipynb  10_dense_to_sparse.ipynb  11_batched_warm_start.ipynb  12_kkt_solve_many_perf.ipynb  13_post_solve_jacobian.ipynb  14_path_following.ipynb  15_convex_qp.ipynb  15_find_minima_repulsion.ipynb  16_find_minima_restart.ipynb  16_socp.ipynb  17_differentiable_convex.ipynb  17_find_minima_hopping.ipynb  18_sos_global_optimization.ipynb  19_find_minima_repulsion.ipynb  20_find_minima_restart.ipynb  21_find_minima_hopping.ipynb  22_curve_fit.ipynb  23_curve_fit_minima.ipynb  24_boundary_value_problems.ipynb  25_pyomo_sensitivity.ipynb  26_parameter_covariance.ipynb  27_dae_manifold_projection.ipynb  28_pyomo_initialization_repair.ipynb  29_trust_region_filter.ipynb  README.md  barrier_curvature_sensitivity.ipynb
python/pounce/: __init__.py  _ad_common.py  _critical.py  _curve_fit.py  _debug_viz.py  _gams_cli.py  _minima.py  _minimize.py  _nlp_batch.py  _preflight.py  _result.py  _route.py  _starts.py  _warm_start.py  global_opt.py  qp.py  sos.py
python/tests/: conftest.py  test_bvp.py  test_critical.py  test_curve_fit.py  test_dae.py  test_debug_viz.py  test_dual_sign_regression.py  test_gams_link.py  test_global.py  test_jax.py  test_minima.py  test_minima_scaling.py  test_minimize.py  test_minimize_autoroute.py  test_minimize_socp_autoroute.py  test_nlp_batch.py  test_ode.py  test_parity_jax_torch.py  test_preflight.py  test_problem.py  test_qa_lp_qp_torch.py  test_qp.py  test_qp_host.py  test_qp_jax.py  test_qp_sensitivity.py  test_qp_torch.py  test_read_nl.py  test_sensitivity.py  test_socp.py  test_socp_jax.py  test_socp_torch.py  test_solver_session.py  test_sos.py  test_sqp_warm_start.py  test_starts.py  test_torch.py  test_warm_start.py  test_warm_start_object.py
(+613 files in other folders)
