[workspace]
resolver = "3"
members = [
    "crates/pounce-common",
    "crates/pounce-linalg",
    "crates/pounce-linsol",
    "crates/pounce-nlp",
    "crates/pounce-nl",
    "crates/pounce-hsl",
    "crates/pounce-feral",
    "crates/pounce-algorithm",
    "crates/pounce-restoration",
    "crates/pounce-presolve",
    "crates/pounce-l1penalty",
    "crates/pounce-qp",
    "crates/pounce-convex",
    "crates/pounce-sensitivity",
    "crates/pounce-solve-report",
    "crates/pounce-observability",
    "crates/pounce-cinterface",
    "crates/pounce-py",
    "crates/pounce-cli",
    "crates/pounce-rs",
    "crates/pounce-studio-core",
    "crates/pounce-studio-pyo3",
    "tools/iter-diff",
]
# Default `cargo build` / `cargo test` skip pounce-hsl so the pure-Rust
# build needs no Fortran/HSL toolchain. To build with the HSL MA57
# backend: `cargo build -p pounce-cli --features ma57`. The pounce-py
# crate is in members so plain `cargo check -p pounce-py` works for
# type-checking, but a wheel build still goes through `cd python &&
# maturin develop` (which enables the `extension-module` feature).
default-members = [
    "crates/pounce-common",
    "crates/pounce-linalg",
    "crates/pounce-linsol",
    "crates/pounce-nlp",
    "crates/pounce-nl",
    "crates/pounce-feral",
    "crates/pounce-algorithm",
    "crates/pounce-restoration",
    "crates/pounce-presolve",
    "crates/pounce-l1penalty",
    "crates/pounce-qp",
    "crates/pounce-convex",
    "crates/pounce-sensitivity",
    "crates/pounce-solve-report",
    "crates/pounce-observability",
    "crates/pounce-cinterface",
    "crates/pounce-cli",
    "crates/pounce-rs",
    "crates/pounce-studio-core",
    "tools/iter-diff",
]

[workspace.package]
version = "0.8.0"
edition = "2024"
license = "EPL-2.0"
authors = ["John Kitchin <jkitchin@andrew.cmu.edu>"]
repository = "https://github.com/jkitchin/pounce"

# Internal + pinned external deps live here so `cargo publish` sees a
# `version =` on every path dep (cargo refuses to publish crates whose
# deps lack a registry version). Crates pick these up via
# `pounce-foo.workspace = true`.
[workspace.dependencies]
pounce-common = { path = "crates/pounce-common", version = "0.8.0" }
pounce-linalg = { path = "crates/pounce-linalg", version = "0.8.0" }
pounce-linsol = { path = "crates/pounce-linsol", version = "0.8.0" }
pounce-nlp = { path = "crates/pounce-nlp", version = "0.8.0" }
pounce-nl = { path = "crates/pounce-nl", version = "0.8.0" }
pounce-hsl = { path = "crates/pounce-hsl", version = "0.8.0" }
pounce-feral = { path = "crates/pounce-feral", version = "0.8.0" }
pounce-algorithm = { path = "crates/pounce-algorithm", version = "0.8.0" }
pounce-restoration = { path = "crates/pounce-restoration", version = "0.8.0" }
pounce-presolve = { path = "crates/pounce-presolve", version = "0.8.0" }
pounce-l1penalty = { path = "crates/pounce-l1penalty", version = "0.8.0" }
pounce-qp = { path = "crates/pounce-qp", version = "0.8.0" }
pounce-convex = { path = "crates/pounce-convex", version = "0.8.0" }
pounce-sensitivity = { path = "crates/pounce-sensitivity", version = "0.8.0" }
pounce-solve-report = { path = "crates/pounce-solve-report", version = "0.8.0" }
pounce-studio-core = { path = "crates/pounce-studio-core", version = "0.8.0" }
pounce-observability = { path = "crates/pounce-observability", version = "0.8.0" }
# feral: pinned to the published crates.io release so the pounce crates stay
# publishable — a git rev would block the crates.io publish and is rejected by
# scripts/check-release-consistency.sh ("git dependency … needs a crates.io
# version"). 0.11.x ships the formerly-unreleased MC64/scaling perf work (#80),
# LU basis engine (#81), and correctness campaign (#82/#83) that we previously
# carried locally via a git patch. 0.11.1 adds a Forrest–Tomlin bump
# re-triangularization fast path (a bump-local sub-diagonal pivot index that
# drops the O(bump²) pivot-selection scan) — bit-identical numerics, no API
# change, big speedup on wide sparse LPs like lifted-McCormick relaxations
# (~15.8× on the casctanks root LP solve). 0.11.2 pools the Forrest–Tomlin
# `SparseLu::update` scratch buffers (≈1804→82 heap allocs/update, ~31% faster
# on a 144-update replay chain) — again bit-identical numerics, no API change.
# 0.12.0 fixes the qap15/mittelmann conic-KKT family end to end: (#91) the
# `OrderingPreprocess::Auto` verify no longer inflates fill via a misfiring
# MC64 `LdltCompress` trigger (qap15 factor 15.4s→0.77s, ~20×); (#99) a packed
# BLAS-3 dense trailing update (~8–10× on large dense fronts); (#102) fixes a
# latent re-entrant nested-rayon workspace-mutex self-deadlock the #91 ordering
# exposed (cont5_2_4_l/dirichlet120 no longer stall at 0% CPU); and (#105)
# escalates the ordering to `LdltCompress` on pivot growth >1e24 so the
# fill-preferred `None` path can't degrade factorization accuracy on late μ→0
# IPM KKTs (restores cont5_2_4_l to 14 iters). Net for pounce: qap15 converges
# (was a 300s timeout) with no regressions — full mittelmann/LP/QP suites stay
# bit-identical. 0.13.0 adds `OrderingMethod::External(Vec<usize>)` (#107) so a
# caller can inject a precomputed fill-reducing permutation (Schur/tearing
# reuse) instead of only picking an ordering *algorithm*; `OrderingMethod` is
# now `Clone` but no longer `Copy`. 0.14.0 is a pure-perf release aimed at the
# IPM-host warm-refactor workload (one pattern, thousands of factorizations,
# exactly pounce): (#127) splits the symbolic pipeline so the `Auto`/`AutoRace`
# ordering races run the expensive tail only for the winner; (#124) reuses the
# permute cache on the default parallel driver so a warm re-factor scatters in
# O(nnz) instead of rebuilding+re-sorting triplets every iteration; (#126)
# fuses the D-block solve into forward substitution (~14–29% faster warm
# solves); plus opt-in tree-parallel sparse solve (#131) and analysis-time
# assembly maps (#125). All bit-identical numerics, no breaking API change.
# 0.14.0 is the current pin. If you ever need to develop against an unreleased
# feral again, add an UNCOMMITTED `[patch.crates-io]` redirecting feral to the
# git rev — e.g.
#   [patch.crates-io]
#   feral = { git = "https://github.com/jkitchin/feral.git", rev = "<sha>" }
# Do NOT commit that patch (it re-introduces the publish blocker).
feral = { version = "0.14.0" }
# Dense linear algebra for the debugger's numerical rank diagnosis
# (SVD of the active-constraint Jacobian). Pure-Rust, MIT; we pull only
# the dense `std` core — no rayon/sparse/rand/npy.
faer = { version = "0.24.0", default-features = false, features = ["std"] }

# Observability / colored-output stack (pounce#71). `anstyle` is the
# style/color vocabulary, `anstyle-query` detects terminal capability
# (truecolor, NO_COLOR, …), `anstream` is the auto-stripping stdout
# wrapper. `tracing` + `tracing-subscriber` provide structured logging.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi", "json"] }
tracing-log = "0.2"
anstyle = "1"
anstyle-query = "1"
anstream = "0.6"
# Thin libc bindings — used only by pounce-common's `cpu_time()` for the
# Unix `getrusage(RUSAGE_SELF)` user-CPU-time path (port of Ipopt's
# `CpuTime()`); gated behind `cfg(unix)` so non-Unix targets keep the
# wallclock fallback.
libc = "0.2"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"

[profile.release]
lto = "thin"
codegen-units = 1
debug = 1
