[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
# Distribution name: the bare `pounce` slot on PyPI is taken by an
# unrelated CLI downloader, so we publish as `pounce-solver`. The
# Python import name is unaffected — users still write `import pounce`
# because maturin's `module-name = "pounce._pounce"` and
# `python-source = "."` keep the package folder named `pounce`.
name = "pounce-solver"
version = "0.3.0"
description = "Python interface to POUNCE — a pure-Rust port of the Ipopt interior-point NLP solver. cyipopt-style Problem class, scipy-style minimize() facade, and JAX-friendly autodiff / implicit differentiation."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "EPL-2.0" }
authors = [{ name = "John Kitchin", email = "jkitchin@andrew.cmu.edu" }]
classifiers = [
    "License :: OSI Approved :: Eclipse Public License 2.0 (EPL-2.0)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]
dependencies = ["numpy>=1.23"]

# Console script: `pip install pounce-solver` drops a `pounce`
# executable on PATH. The shim in pounce/_cli.py transfers control
# to the bundled Rust binary at pounce/bin/pounce (or pounce.exe).
# Local `maturin develop` installs do not bundle the binary; the
# shim prints a helpful message in that case.
[project.scripts]
pounce = "pounce._cli:main"

[project.optional-dependencies]
jax = ["jax>=0.4.30", "jaxlib>=0.4.30"]
scipy = ["scipy>=1.11"]
dev = ["pytest>=7", "scipy>=1.11", "jax>=0.4.30", "jaxlib>=0.4.30"]

[project.urls]
Homepage = "https://github.com/jkitchin/pounce"
Issues = "https://github.com/jkitchin/pounce/issues"

[dependency-groups]
notebooks = ["pyomo>=6.7", "pyomo-pounce", "ipykernel>=6"]

[tool.uv]
default-groups = ["notebooks"]

[tool.uv.sources]
pyomo-pounce = { path = "../pyomo-pounce", editable = true }

[tool.maturin]
manifest-path = "../crates/pounce-py/Cargo.toml"
python-source = "."
module-name = "pounce._pounce"
features = ["pyo3/extension-module"]
strip = true
# Pull the bundled CLI binary into the wheel. The release workflow
# stages the platform-appropriate binary under pounce/bin/ before
# invoking maturin; this glob captures whatever lands there. The
# `format = "wheel"` scope keeps it out of the sdist (which is
# platform-agnostic and should not carry a compiled binary).
include = [{ path = "pounce/bin/*", format = "wheel" }]
