[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
# Distribution name: the bare `pounce` slot on PyPI is taken by an
# unrelated CLI downloader, so we publish as `pounce-solver`. The
# Python import name is unaffected — users still write `import pounce`
# because maturin's `module-name = "pounce._pounce"` and
# `python-source = "."` keep the package folder named `pounce`.
name = "pounce-solver"
version = "0.7.0"
description = "Python interface to POUNCE — a pure-Rust interior-point optimization solver for nonlinear, conic (LP/QP/SOCP/SDP/exp/power), and global problems (NLP core ported from Ipopt). cyipopt-style Problem class, scipy-style minimize() facade, solve_qp/solve_socp/sos_minimize, and JAX-friendly autodiff / implicit differentiation."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "EPL-2.0" }
authors = [{ name = "John Kitchin", email = "jkitchin@andrew.cmu.edu" }]
classifiers = [
    "License :: OSI Approved :: Eclipse Public License 2.0 (EPL-2.0)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]
dependencies = ["numpy>=1.23", "scipy>=1.11"]

# Console script: `pip install pounce-solver` drops a `pounce`
# executable on PATH. The shim in pounce/_cli.py transfers control
# to the bundled Rust binary at pounce/bin/pounce (or pounce.exe).
# Local `maturin develop` installs do not bundle the binary; the
# shim prints a helpful message in that case.
[project.scripts]
pounce = "pounce._cli:main"
# Interactive viewer for the debugger's `viz`/`save` artifacts. Point the
# debugger at it with: export POUNCE_DBG_VIEWER='pounce-dbg-viz {}'
pounce-dbg-viz = "pounce._debug_viz:main"
# GAMS solver-link registration (the `[gams]` extra). `pounce-gams register`
# writes/merges a gamsconfig.yaml entry so GAMS can `option nlp = pounce;`.
# `pounce-gams-link` is the launcher GAMS invokes with a control file.
pounce-gams = "pounce._gams_cli:main"
pounce-gams-link = "pounce.gams.link:main"

[project.optional-dependencies]
jax = ["jax>=0.4.30", "jaxlib>=0.4.30"]
# torch.func (functorch, merged into core) requires torch >= 2.0; pin
# >= 2.2 for a stable torch.func surface (pounce#109). CPU wheels are
# sufficient — pounce solves on the host.
torch = ["torch>=2.2"]
# scipy is now a hard dependency (used by the minimize facade for Bounds,
# LinearConstraint, OptimizeResult, and sparse helpers). Kept as an extra
# alias for callers who still write `pounce-solver[scipy]` in their pins.
scipy = ["scipy>=1.11"]
# diffrax is only needed to run the inverse-map ODE example/recipe
# (pounce#91); the inverse_map_rhs helper itself depends only on jax.
diffrax = ["diffrax>=0.5"]
viz = ["plotly>=5"]
# GAMS solver link. `gamsapi[core]` is GAMS's own expert-level GMO/GEV Python
# API (on PyPI); its bindings dlopen the user's GAMS C libraries, so pin it to
# match the installed GAMS (`pounce-gams status` diagnoses a mismatch). PyYAML
# is used to merge POUNCE into an existing gamsconfig.yaml without clobbering
# other solvers.
gams = ["gamsapi[core]>=45", "pyyaml>=6"]
dev = ["pytest>=7", "scipy>=1.11", "jax>=0.4.30", "jaxlib>=0.4.30", "torch>=2.2", "plotly>=5", "pyyaml>=6"]

[project.urls]
Homepage = "https://github.com/jkitchin/pounce"
Issues = "https://github.com/jkitchin/pounce/issues"

[dependency-groups]
notebooks = ["pyomo>=6.7", "pyomo-pounce", "ipykernel>=6"]

[tool.uv]
default-groups = ["notebooks"]

[tool.uv.sources]
pyomo-pounce = { path = "../pyomo-pounce", editable = true }

[tool.maturin]
manifest-path = "../crates/pounce-py/Cargo.toml"
python-source = "."
module-name = "pounce._pounce"
features = ["pyo3/extension-module"]
strip = true
# Pull the bundled CLI binary into the wheel. The release workflow
# stages the platform-appropriate binary under pounce/bin/ before
# invoking maturin; this glob captures whatever lands there. The
# `format = "wheel"` scope keeps it out of the sdist (which is
# platform-agnostic and should not carry a compiled binary).
include = [{ path = "pounce/bin/*", format = "wheel" }]
