[package]
name = "pounce-cutest"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "cutest_suite"
path = "src/bin/cutest_suite.rs"

[dependencies]
pounce-common = { path = "../../crates/pounce-common" }
pounce-nlp = { path = "../../crates/pounce-nlp" }
pounce-algorithm = { path = "../../crates/pounce-algorithm" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
