[package]
name = "pounce-large-scale"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "large_scale_suite"
path = "src/bin/large_scale_suite.rs"

[[bin]]
name = "large_scale_ipopt"
path = "src/bin/large_scale_ipopt.rs"

[dependencies]
pounce-common.workspace = true
pounce-nlp.workspace = true
pounce-algorithm.workspace = true
pounce-restoration.workspace = true
pounce-linsol.workspace = true
pounce-feral.workspace = true
