[package]
name = "pounce-algorithm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
description = "Algorithm-side core for POUNCE (port of Ipopt's src/Algorithm/): IteratesVector, IpoptData, CalculatedQuantities, KKT solvers, line search, mu update, conv check, initializer, IpoptAlg main loop, AlgBuilder."
keywords = ["ipopt", "interior-point", "nlp", "optimization", "solver"]
categories = ["mathematics", "algorithms", "science"]

[dependencies]
pounce-common.workspace = true
pounce-linalg.workspace = true
pounce-linsol.workspace = true
pounce-nlp.workspace = true
pounce-feral.workspace = true
pounce-presolve.workspace = true
pounce-l1penalty.workspace = true
pounce-qp.workspace = true
pounce-observability.workspace = true
# Ipopt-style console printers (banner/stats/summary): the engine emits
# the stats and summary blocks itself, gated on print_level (#206).
pounce-solve-report.workspace = true
pounce-hsl = { workspace = true, optional = true }
faer.workspace = true
# Batched NLP solving (`batch.rs`, pounce#126): instances run on
# rayon's global pool, outer-parallel / inner-serial. Same dep the QP
# batch in pounce-convex uses.
rayon = "1"
tracing.workspace = true
anstream.workspace = true
anstyle.workspace = true

[features]
default = []
# Enable the HSL MA57 backend. Requires libcoinhsl on the link path.
ma57 = ["dep:pounce-hsl"]

[lints]
workspace = true
