[package]
name = "pounce-cinterface"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
description = "C ABI for POUNCE (port of Ipopt's Interfaces/IpStdCInterface.{h,cpp}). Provides IpoptCreate / IpoptSolve / IpoptFreeProblem so existing PyIpopt / cyipopt / JuMP / AMPL clients link without source changes. Phase 11 — scaffolded; full implementation lands when the algorithm-side optimizer is solving."
keywords = ["ipopt", "c-api", "ffi", "nlp", "optimization"]
categories = ["mathematics", "external-ffi-bindings", "api-bindings"]

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
pounce-common.workspace = true
pounce-nlp.workspace = true
pounce-algorithm.workspace = true
pounce-restoration.workspace = true
pounce-sensitivity.workspace = true

[lints]
workspace = true
