[package]
name = "pounce-cinterface"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
description = "C ABI for POUNCE (port of Ipopt's Interfaces/IpStdCInterface.{h,cpp}). Provides CreateIpoptProblem / IpoptSolve / FreeIpoptProblem so existing PyIpopt / cyipopt / JuMP / AMPL clients link without source changes. Feature-complete for the upstream Ipopt C ABI surface."
keywords = ["ipopt", "c-api", "ffi", "nlp", "optimization"]
categories = ["mathematics", "external-ffi-bindings", "api-bindings"]

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
pounce-common.workspace = true
pounce-nlp.workspace = true
pounce-algorithm.workspace = true
pounce-qp.workspace = true
pounce-restoration.workspace = true
pounce-sensitivity.workspace = true
pounce-linsol.workspace = true
pounce-solve-report.workspace = true
pounce-observability.workspace = true

[dev-dependencies]
serde_json = "1"

[lints]
workspace = true
