[package]
name = "pounce-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Command-line driver for POUNCE — solves built-in TNLPs and AMPL .nl files."

[[bin]]
name = "pounce"
path = "src/main.rs"

[dependencies]
pounce-common = { path = "../pounce-common" }
pounce-nlp = { path = "../pounce-nlp" }
pounce-algorithm = { path = "../pounce-algorithm" }
pounce-restoration = { path = "../pounce-restoration" }
pounce-feral = { path = "../pounce-feral" }
pounce-hsl = { path = "../pounce-hsl", optional = true }
pounce-linsol = { path = "../pounce-linsol" }
pounce-presolve = { path = "../pounce-presolve" }

[features]
default = []
# Enable the HSL MA57 backend (requires libcoinhsl). When enabled, also
# turns on the matching feature in pounce-algorithm so the option
# `linear_solver = ma57` resolves to MA57 instead of falling back to FERAL.
ma57 = ["dep:pounce-hsl", "pounce-algorithm/ma57"]

[lints]
workspace = true
